﻿todo:
Ground zotz
update DB
add ressize to crabs
make illhybrids RP cheaper
do something with taurs
remove magic:acces button (or at least check what it do)
add PREVIEW sites for montag units (foulspawns)
sacred power slider now will do something
generate uwrec units for uwbuild nations.
summoning sites are better (but mb not only them)
update nation descriptions and version to NG-N
themes should be written in nat descr

0.8.0-DEV (Date goes here)
----------------------------------------------------------
Note: from this version its NatGen-N, however it includes some unreleased features. Should put N somewhere in the version number lol.

Code
----------------------------------------------------------
- Fixed some errors in srctest caused by wrong package declaration and missing imports
- Added txt file to help people in figuring out how to open the project

Content 
-----------------------------------------------------------
- Nadir and dustwalkers got nerf to dust (gold cost incr for both, rp incr for nadir)

Content (From unreleased 0.7.0-RC13, which at this point counts as 0.7.13 by me, cuz 13 pre-releases cmon)
-----------------------------------------------------------
- Pygmy headresses now provide 5 to 10 invulnerability
- Pygmy only and other austral themes where pygmies are troops now have buffs. Mainly allowing access to worse 5 gold pygmies (those were implemeted before, but not for the aforementioned themes)
- Pygmy Eite Archer has the amount of occurences halved now has a little cousin, a regular pygmy archer
- Colossi mages are unfinished, themes that require them now disabled
- Elite Pygmies now may have small headdresses or a leather cap
- Elite Elite Pygmies now have a chance at leather and iron caps


=============================
0.7.0-RC12 (14th of Jan 2021)
----------------------------------------------------------
note: this is the last release of Elmokkis nationgen so far, this changelog entry was added after NG-N forking.

Code